myconfig/16751-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 16751-webapp-deployment
  namespace: 16751-proj
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: 16751-webapp-deployment
        image: davidhtcmail/todaycluster:v1  # Replace with your actual backend image name
        ports:
        - containerPort: 8001
