myconfig/16751-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-16751
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8001
